crates/tests/src/snapshots/fe_compiler_tests__compile_errors__abi_encode_u256.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: value of type u256 does not support `abi_encode()`
  ┌─ compile_errors/abi_encode_u256.fe:3:9
  │
3 │         42.abi_encode()
  │         ^^ this value cannot be encoded using `abi_encode()`
  │
  = Hint: struct and tuple values can be encoded.
  = Example: `(42,).abi_encode()`


