crates/tests/src/snapshots/fe_compiler_tests__compile_errors__assert_reason_not_string.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `assert` reason must be a string
  ┌─ [snippet]:3:16
  │
3 │   assert true, 1
  │                ^ this has type `u256`; expected a string


