crates/tests/src/snapshots/fe_compiler_tests__compile_errors__bad_map2.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` key and value must be types
  ┌─ [snippet]:3:19
  │
3 │   x: Map<address, 100>
  │                   ^^^ this should be a type name


