crates/tests/src/snapshots/fe_compiler_tests__compile_errors__bad_map4.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `Map` expects 2 arguments, but 1 was provided
  ┌─ [snippet]:3:6
  │
3 │   x: Map<y>
  │      ^^^ - supplied 1 argument
  │      │    
  │      expects 2 arguments


